Overleaf setup Now everything compile on Overleaf, ready to start working

--- a/DD/LaTeX/DD.tex
+++ b/DD/LaTeX/DD.tex
@@ -32,7 +32,7 @@
 \usepackage{subfig} % Numbered and caption subfigures using \subfloat.
 \usepackage{tikz} % A package for high-quality hand-made figures.
 \usetikzlibrary{}
-\graphicspath{{./images/}} % Directory of the images
+\graphicspath{{./Images/}} % Directory of the images
 \usepackage{amsthm} % Coloured "Theorem"
 \usepackage{thmtools}
 \usepackage{xcolor}
@@ -117,12 +117,12 @@
 
     \puttitle{
         title=Software Engineering 2\\Design Document,
-        name1=Ballabio Giacomo - 10769576, % Author Name and Surname
-        name2=Benelle Francesco - 10727489,
-        name3=Cavallotti Alberto - 10721275,
-        academicyear=2023-2024,
+        name1=Pica Mirko - 10811404, % Author Name and Surname
+        name2=Pianalto Riccardo - 10835980,
+        name3=Prendin Christian - 10827556,
+        academicyear=2024-2025,
         version=1.0,
-        releasedate=07/01/2024,
+        releasedate=07/01/2025,
           }
     
     
@@ -143,37 +143,37 @@
 
     \chapter{Introduction}
     \label{ch:introduction}%
-    \input{Chapters/1_-_Introduction}
+    \input{Chapters/1_Introduction}
 
 
     \chapter{Architectural Design}
     \label{ch:rchitectural_design}%
-    \input{Chapters/2_-_Architectural_Design}
+    \input{Chapters/2_Architectural_Design}
 
 
     \chapter{User Interface Design}
     \label{ch:user_interface_design}%
-    \input{Chapters/3_-_User_Interface_Design}
+    \input{Chapters/3_User_Interface_Design}
 
 
     \chapter{Requirements Traceability}
     \label{ch:requirements_traceability}%
-    \input{Chapters/4_-_Requirements_Traceability}
+    \input{Chapters/4_Requirements_Traceability}
 
 
     \chapter{Implementation, Integration and Test Plan}
     \label{ch:Implementation_integration_test_plan}%
-    \input{Chapters/5_-_Implementation_Integration_Test_Plan}
+    \input{Chapters/5_Implementation_Integration_Test_Plan}
 
 
     \chapter{Effort Spent}
     \label{ch:effort_spent}%
-    \input{Chapters/6_-_Effort_Spent}
+    \input{Chapters/6_Effort_Spent}
 
 
     \chapter{References}
     \label{ch:references}%
-    \input{Chapters/7_-_References}
+    \input{Chapters/7_References}
 
 % LIST OF FIGURES
     \listoffigures
