--- a/RASD/LaTeX/RASD.tex
+++ b/RASD/LaTeX/RASD.tex
@@ -32,7 +32,7 @@
 \usepackage{subfig} % Numbered and caption subfigures using \subfloat.
 \usepackage{tikz} % A package for high-quality hand-made figures.
 \usetikzlibrary{}
-\graphicspath{{./images/}} % Directory of the images
+\graphicspath{{./Images}} % Directory of the images
 \usepackage{amsthm} % Coloured "Theorem"
 \usepackage{thmtools}
 \usepackage{xcolor}
@@ -133,12 +133,12 @@
 
     \puttitle{
         title=Software Engineering 2\\Requirements Analysis and\\Specification Document,
-        name1=Ballabio Giacomo - 10769576, % Author Name and Surname
-        name2=Benelle Francesco - 10727489,
-        name3=Cavallotti Alberto - 10721275,
-        academicyear=2023-2024,
+        name1=Pica Mirko - 10811404, % Author Name and Surname
+        name2=Pianalto Riccardo - 10835980,
+        name3=Prendin Christian - 10827556,
+        academicyear=2024-2025,
         version=1.0,
-        releasedate=22/12/2023,
+        releasedate=22/12/2024,
           }
     
     
@@ -159,32 +159,32 @@
 
     \chapter{Introduction}
     \label{ch:introduction}%
-    \input{Chapters/1_-_Introduction}
+    \input{Chapters/1_Introduction}
 
 
     \chapter{Overall Description}
     \label{ch:overall_description}%
-    \input{Chapters/2_-_Overall_Description}
+    \input{Chapters/2_Overall_Description}
 
 
     \chapter{Specific Requirements}
     \label{ch:specific_requirements}%
-    \input{Chapters/3_-_Specific_Requirements}
+    \input{Chapters/3_Specific_Requirements}
 
 
     \chapter{Formal Analysis Using Alloy}
     \label{ch:formal_analysis_using_alloy}%
-    \input{Chapters/4_-_Formal_Analysis_Using_Alloy}
+    \input{Chapters/4_Formal_Analysis_Using_Alloy}
 
 
     \chapter{Effort Spent}
     \label{ch:effort_spent}%
-    \input{Chapters/5_-_Effort_Spent}
+    \input{Chapters/5_Effort_Spent}
 
 
     \chapter{References}
     \label{ch:references}%
-    \input{Chapters/6_-_References}
+    \input{Chapters/6_References}
 
 % LIST OF FIGURES
     \listoffigures
