Started Usecases Did a few usecases and relative sequence diagram

--- a/RASD/LaTeX/RASD.tex
+++ b/RASD/LaTeX/RASD.tex
@@ -26,6 +26,7 @@
 
 % PACKAGES FOR IMAGES
 \usepackage{graphicx}
+\usepackage{svg}
 \usepackage{transparent} % Enables transparent images
 \usepackage{eso-pic} % For the background picture on the title page
 \usepackage{subfig} % Numbered and caption subfigures using \subfloat.
